[package]
name = "enum2pos"
version = "0.1.2"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
enum2pos is a rust derive macro that creates a Display impl for enums. 
This is useful for strongly typing composable sets of strings.
"""
homepage = "https://github.com/matthewjberger/enum2pos"
repository = "https://github.com/matthewjberger/enum2pos"
keywords = ["enum", "macro", "string"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
