[package]
name = "enum2pos"
version = "0.1.2"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
enum2pos is a rust derive macro for enums that generates "from_index(usize, Vec<String>) -> Option<Self>" and
"to_index()" methods for converting between an variants and
their position within the enum declaration (similar to an index).
"""
homepage = "https://github.com/matthewjberger/enum2pos"
repository = "https://github.com/matthewjberger/enum2pos"
keywords = ["enum", "macro", "string", "index"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
